fix: update personal website link in contact information

--- a/resume.tex
+++ b/resume.tex
@@ -79,7 +79,7 @@
     \begin{tabular}{@{}p{0.03\textwidth}p{0.43\textwidth}p{0.03\textwidth}p{0.43\textwidth}@{}}
         \faMapMarker* & Ho Chi Minh city & \faEnvelope & trungkien1412.dev@gmail.com\\
         & (Possible to relocate) & & \\[0.1cm]
-        \faPhone* & 0339950392& \faGlobe & \href{https://www.linkedin.com/in/trungkiendev/}{linkedin.com/in/trungkiendev/}\\
+        \faPhone* & 0339950392& \faGlobe & \href{https://kien-tt.com/}{https://kien-tt.com}\\
     \end{tabular}
 \end{minipage}
 
