feat: update education details and revise key skills section

--- a/resume.tex
+++ b/resume.tex
@@ -14,7 +14,6 @@
 \usepackage{array}
 \usepackage{tabularx}
 \usepackage{multicol}
-\usepackage{microtype}
 % Page setup
 \geometry{left=1.5cm, right=1.5cm, top=1.5cm, bottom=1.5cm}
 \pagestyle{empty}
@@ -95,7 +94,7 @@ Full-stack Developer with 3+ years of experience building web applications end-t
     \section*{Education}
     \textbf{Bachelor of Information Technology}\\
     Ho Chi Minh City University of Technology\\
-    \textit{(2017-22)}\\[0.2cm]
+    \textit{(2018-23)}\\[0.2cm]
     \textbullet\ \textbf{Certificate:} SAA-C03, DVA-C02 \\
     \textbullet\ \textbf{Languages:} Vietnamese, English
 \end{minipage}
@@ -106,15 +105,12 @@ Full-stack Developer with 3+ years of experience building web applications end-t
 
 \begin{multicols}{3}
 \begin{itemize}[leftmargin=*,itemsep=0pt]
-    \item \textbf{Programming:} Python (proficient), SQL (proficient), Java, C++.
-    \item \textbf{Database:} MSSQL, MySQL, Postgre, MongoDB.
-    \item \textbf{Cloud Engineering:} Azure (Synapse, Factory, Storage), AWS (EC2, S3, RDS), GCP (Big Query, Storage).
-    \item \textbf{Data ingestion:} Azure Data Factory (proficient), Azure DataBrick, Python, Nifi, PySpark, Kafka, Airbyte.
-    \item \textbf{Data Modeling/ Data Warehouse/ Data Lake House:} Star/ Snowflake Schema, DBT (Data Build Tool).
-    \item \textbf{Orchestration \& Scheduling:} Airflow.
-    \item \textbf{Crawler:} Selenium, Scrapy.
-    \item \textbf{Others:} Pandas, Celery, Git, Linux, Selenium, Tor proxy, FastAPI, Flask, Neptune, Neo4j.
+    \item \textbf{Programming: }TypeScript, C\#, Python, Rust. 
+    \item \textbf{Cloud Engineering:} AWS (S3, Lambda, Step Function, ECS, RDS), Firebase. 
+    \item \textbf{Database:} Oracle, MySQL, DynamoDB, AWS Aurora.
+    \item \textbf{DevOps:} Docker, Terraform, CI/CD.
     \item \textbf{Professional communication} - Understand both \textbf{business} and \textbf{technical} concepts.
+    \item \textbf{Others:} Git, Linux, Selenium, Jest , xUnit, Nova Act.
 \end{itemize}
 \end{multicols}
 
