feat: enhance experience section with underlined job responsibilities and achievements

--- a/resume.tex
+++ b/resume.tex
@@ -118,12 +118,12 @@ Full-stack Developer with 3+ years of experience building web applications end-t
 
 \experienceitem{VNG - ZaloPay}{(\textasciitilde8 mos) Sep 2024 - Now}{Data Engineer - Payment Data Platform Dept}{}
 
-\textbf{Data Ingestion, Data Pipeline} (Nifi, Airflow, Pyspark, Python, Hadoop, S3)
+\underline{\textbf{Data Ingestion, Data Pipeline}} (Nifi, Airflow, Pyspark, Python, Hadoop, S3)
 \begin{itemize}[leftmargin=*,itemsep=2pt]
     \item Designed and implemented scalable data ingestion pipelines, integrating data from multiple structured and unstructured sources into a data lake (AWS S3, Hadoop).
 \end{itemize}
 
-\textbf{Data Warehousing/ Data Lakehouse} (AWS S3, Hadoop, AWS Redshift, Pyspark, Airflow, Delta Lake)
+\underline{\textbf{Data Warehousing/ Data Lakehouse}} (AWS S3, Hadoop, AWS Redshift, Pyspark, Airflow, Delta Lake)
 \begin{itemize}[leftmargin=*,itemsep=2pt]
     \item Designed, developed data models to support analytics reporting, ensuring scalability and cost efficiency.
     \item Collaborated with stakeholders to define data requirements, ensuring compliance with governance, security.
@@ -133,29 +133,29 @@ Full-stack Developer with 3+ years of experience building web applications end-t
 
 \experienceitem{HEINEKEN VIET NAM}{(2 yr 1 mos) Sep 2022 - Sep 2024}{Mid-level Data Engineer - Digital \& Technology Dept - Data Management Team}{}
 
-\textbf{Data Ingestion, Data Pipeline} (Azure Data Factory, Azure Synapse Analytics, Azure Data Brick, Python)
+\underline{\textbf{Data Ingestion, Data Pipeline}} (Azure Data Factory, Azure Synapse Analytics, Azure Data Brick, Python)
 \begin{itemize}[leftmargin=*,itemsep=2pt]
     \item Developed and maintained data pipeline to centralize multiples sources into central repository that stored over 20 sources of data, enabling data-driven decision making for key business initiatives.
 \end{itemize}
 
-\textbf{Data Modeling} (Azure Data Brick, Synapse Dedicated Pool, SQL, Synapse Pipeline, Store Procedure, Star Schema)
+\underline{\textbf{Data Modeling}} (Azure Data Brick, Synapse Dedicated Pool, SQL, Synapse Pipeline, Store Procedure, Star Schema)
 \begin{itemize}[leftmargin=*,itemsep=2pt]
     \item Designed and implemented efficient data models to support reporting needs, ensuring optimal performance.
     \item Collaborated with stakeholders to define data requirements and ensure data compliance standards.
 \end{itemize}
 
-\textbf{Data Quality- Accuracy - Availability} (Data Freshness, Data Uniqueness, Data Completeness)
+\underline{\textbf{Data Quality- Accuracy - Availability}} (Data Freshness, Data Uniqueness, Data Completeness)
 \begin{itemize}[leftmargin=*,itemsep=2pt]
     \item Developed log, alert, monitoring dashboard that improved data quality, accuracy and availability which identified and resolved issues before they impacted business operations.
 \end{itemize}
 
-\textbf{Cost Optimization} by Resource Rightsizing (-12,5\% saving) (Deep understanding cloud pricing model)
+\underline{\textbf{Cost Optimization}} by Resource Rightsizing (-12,5\% saving) (Deep understanding cloud pricing model)
 \begin{itemize}[leftmargin=*,itemsep=2pt]
     \item Implemented automated cost management
     \item Implemented service workload management which help ETL pipeline more efficiency.
 \end{itemize}
 
-\textbf{Collaboration}
+\underline{\textbf{Collaboration}}
 \begin{itemize}[leftmargin=*,itemsep=2pt]
     \item Led a cross-functional team to establish data management policies and best practices, resulting in improved data security and compliance. Led a team of 2 interns, code review, shared knowledge and mentored intern resources.
 \end{itemize}
@@ -164,13 +164,13 @@ Full-stack Developer with 3+ years of experience building web applications end-t
 
 \experienceitem{SIEU VIET GROUP - Công ty Cổ phần Nguồn Nhân Lực Siêu Việt}{(1 yr 4 mos) Jun 2021 - Sep 2022}{Data Engineer - Technology Dept - Data Team}{}
 
-\textbf{Data Platform Migration, Data Enrichment} (Big Query, DBT, Git, Airflow, Airbyte, Python)
+\underline{\textbf{Data Platform Migration, Data Enrichment}} (Big Query, DBT, Git, Airflow, Airbyte, Python)
 \begin{itemize}[leftmargin=*,itemsep=2pt]
     \item Successfully migrated from legacy databases to new Data Platform with dynamic ETL, data lineage, data modeling.
     \item Centralized Sales, Marketing, ERP, ... sources (RDB, Crawling, API, Files, Storage,..) into a single central data repository.
 \end{itemize}
 
-\textbf{DWH Operation and Quality Control}
+\underline{\textbf{DWH Operation and Quality Control}}
 \begin{itemize}[leftmargin=*,itemsep=2pt]
     \item Developed EDA Process, Unit Tests and Alert System to control Data Quality
     \item Optimize Big Query cost with Partition + Clustering + incremental in DBT
