feat: update experience section with new roles and responsibilities, and add certifications

--- a/resume.tex
+++ b/resume.tex
@@ -95,7 +95,6 @@ Full-stack Developer with 3+ years of experience building web applications end-t
     \textbf{Bachelor of Information Technology}\\
     Ho Chi Minh City University of Technology\\
     \textit{(2018-23)}\\[0.2cm]
-    \textbullet\ \textbf{Certificate:} SAA-C03, DVA-C02 \\
     \textbullet\ \textbf{Languages:} Vietnamese, English
 \end{minipage}
 
@@ -116,78 +115,53 @@ Full-stack Developer with 3+ years of experience building web applications end-t
 
 \section*{Experience}
 
-\experienceitem{VNG - ZaloPay}{(\textasciitilde8 mos) Sep 2024 - Now}{Data Engineer - Payment Data Platform Dept}{}
+\experienceitem{Care Connect Vietnam}{(\textasciitilde2 yrs) Mar 2023 - Present}{Full-stack Developer}{}
 
-\underline{\textbf{Data Ingestion, Data Pipeline}} (Nifi, Airflow, Pyspark, Python, Hadoop, S3)
+\underline{\textbf{Production System Development}} (TypeScript, Angular, C\#, .NET Core)
 \begin{itemize}[leftmargin=*,itemsep=2pt]
-    \item Designed and implemented scalable data ingestion pipelines, integrating data from multiple structured and unstructured sources into a data lake (AWS S3, Hadoop).
+    \item Build and scale production systems serving 20k+ users and \textasciitilde50k connected devices, own features end-to-end.
 \end{itemize}
 
-\underline{\textbf{Data Warehousing/ Data Lakehouse}} (AWS S3, Hadoop, AWS Redshift, Pyspark, Airflow, Delta Lake)
+\underline{\textbf{Data Pipeline \& Performance Optimization}} (AWS Step Functions, Lambda)
 \begin{itemize}[leftmargin=*,itemsep=2pt]
-    \item Designed, developed data models to support analytics reporting, ensuring scalability and cost efficiency.
-    \item Collaborated with stakeholders to define data requirements, ensuring compliance with governance, security.
+    \item Design and optimize data aggregation pipelines on AWS, increase analytics coverage by 400\% and improve application performance by 2.5x.
 \end{itemize}
 
-\vspace{0.3cm}
-
-\experienceitem{HEINEKEN VIET NAM}{(2 yr 1 mos) Sep 2022 - Sep 2024}{Mid-level Data Engineer - Digital \& Technology Dept - Data Management Team}{}
-
-\underline{\textbf{Data Ingestion, Data Pipeline}} (Azure Data Factory, Azure Synapse Analytics, Azure Data Brick, Python)
+\underline{\textbf{Infrastructure \& Cost Optimization}} (AWS Aurora, DynamoDB, Oracle DB)
 \begin{itemize}[leftmargin=*,itemsep=2pt]
-    \item Developed and maintained data pipeline to centralize multiples sources into central repository that stored over 20 sources of data, enabling data-driven decision making for key business initiatives.
-\end{itemize}
-
-\underline{\textbf{Data Modeling}} (Azure Data Brick, Synapse Dedicated Pool, SQL, Synapse Pipeline, Store Procedure, Star Schema)
-\begin{itemize}[leftmargin=*,itemsep=2pt]
-    \item Designed and implemented efficient data models to support reporting needs, ensuring optimal performance.
-    \item Collaborated with stakeholders to define data requirements and ensure data compliance standards.
-\end{itemize}
-
-\underline{\textbf{Data Quality- Accuracy - Availability}} (Data Freshness, Data Uniqueness, Data Completeness)
-\begin{itemize}[leftmargin=*,itemsep=2pt]
-    \item Developed log, alert, monitoring dashboard that improved data quality, accuracy and availability which identified and resolved issues before they impacted business operations.
-\end{itemize}
-
-\underline{\textbf{Cost Optimization}} by Resource Rightsizing (-12,5\% saving) (Deep understanding cloud pricing model)
-\begin{itemize}[leftmargin=*,itemsep=2pt]
-    \item Implemented automated cost management
-    \item Implemented service workload management which help ETL pipeline more efficiency.
-\end{itemize}
-
-\underline{\textbf{Collaboration}}
-\begin{itemize}[leftmargin=*,itemsep=2pt]
-    \item Led a cross-functional team to establish data management policies and best practices, resulting in improved data security and compliance. Led a team of 2 interns, code review, shared knowledge and mentored intern resources.
+    \item Contribute to infrastructure design and cost optimization, achieving up to 10x cost savings through improved AWS architecture.
 \end{itemize}
 
 \vspace{0.3cm}
 
-\experienceitem{SIEU VIET GROUP - Công ty Cổ phần Nguồn Nhân Lực Siêu Việt}{(1 yr 4 mos) Jun 2021 - Sep 2022}{Data Engineer - Technology Dept - Data Team}{}
+\experienceitem{Freelance Software Developer}{(\textasciitilde9 mos) May 2024 - Present}{Self-Employed / Independent Contractor}{}
 
-\underline{\textbf{Data Platform Migration, Data Enrichment}} (Big Query, DBT, Git, Airflow, Airbyte, Python)
+\underline{\textbf{Web Development \& Customization}} (PHP, WordPress)
 \begin{itemize}[leftmargin=*,itemsep=2pt]
-    \item Successfully migrated from legacy databases to new Data Platform with dynamic ETL, data lineage, data modeling.
-    \item Centralized Sales, Marketing, ERP, ... sources (RDB, Crawling, API, Files, Storage,..) into a single central data repository.
+    \item Deliver and customize 10+ client websites and landing pages using WordPress templates, supporting sales, marketing, and small business operations.
 \end{itemize}
 
-\underline{\textbf{DWH Operation and Quality Control}}
+\underline{\textbf{Application Maintenance \& Enhancement}} (TypeScript, Angular, React)
 \begin{itemize}[leftmargin=*,itemsep=2pt]
-    \item Developed EDA Process, Unit Tests and Alert System to control Data Quality
-    \item Optimize Big Query cost with Partition + Clustering + incremental in DBT
+    \item Maintain and enhance production Angular and React applications, implement feature updates, bug fixes, and performance improvements.
+    \item Provide ongoing maintenance and technical support, ensure site stability, security updates, and smooth client operations.
+\end{itemize}
+
+\underline{\textbf{Client Collaboration}}
+\begin{itemize}[leftmargin=*,itemsep=2pt]
+    \item Work directly with clients to gather requirements, estimate scope, and deliver solutions on schedule.
 \end{itemize}
 
 \vspace{0.3cm}
 
-\experienceitem{HPT VIET NAM CORPORATION}{(3 mos) Apr 2021 - Jun 2021}{Intern Data Engineer - Data Department}{}
+\section*{Certifications \& Interests}
 
-\vspace{0.3cm}
-
-\section*{Highlight Activities}
-
+\textbf{Certifications:}
 \begin{itemize}[leftmargin=*,itemsep=2pt]
-    \item Lecturer at CodeGym (1 yr 6 mos - Apr 2022 to Dec 2023)
-    \item Won the Lifelong Learner prizes at D\&T HEINEKEN Viet Nam 2023
-    \item Security Challenge 2024 Achivement at VNG- ZaloPay
+    \item AWS Certified Developer - Associate (DVA-C02)
+    \item AWS Certified Solutions Architect - Associate (SAA-C03)
 \end{itemize}
+
+\textbf{Interests:} Technology trends, AI, music, floral arrangement, traveling
 
 \end{document}
