fix: correct user count and improve phrasing in experience section

--- a/resume.tex
+++ b/resume.tex
@@ -115,11 +115,11 @@ Full-stack Developer with 3+ years of experience building web applications end-t
 
 \section*{Experience}
 
-\experienceitem{Care Connect Vietnam}{(\textasciitilde2 yrs) Mar 2023 - Present}{Full-stack Developer}{}
+\experienceitem{Care Connect Vietnam}{Mar 2023 - Present}{Full-stack Developer}{}
 
 \underline{\textbf{Production System Development}} (TypeScript, Angular, C\#, .NET Core)
 \begin{itemize}[leftmargin=*,itemsep=2pt]
-    \item Build and scale production systems serving 20k+ users and \textasciitilde50k connected devices, own features end-to-end.
+    \item Build and scale production systems serving 20k+ users and 30k+ connected devices, own features end-to-end.
 \end{itemize}
 
 \underline{\textbf{Data Pipeline \& Performance Optimization}} (AWS Step Functions, Lambda)
@@ -134,7 +134,7 @@ Full-stack Developer with 3+ years of experience building web applications end-t
 
 \vspace{0.3cm}
 
-\experienceitem{Freelance Software Developer}{(\textasciitilde9 mos) May 2024 - Present}{Self-Employed / Independent Contractor}{}
+\experienceitem{Freelance Software Developer}{May 2024 - Present}{Self-Employed / Independent Contractor}{}
 
 \underline{\textbf{Web Development \& Customization}} (PHP, WordPress)
 \begin{itemize}[leftmargin=*,itemsep=2pt]
