feat: expand infrastructure and cost optimization skills with Firebase integration

--- a/resume.tex
+++ b/resume.tex
@@ -127,7 +127,7 @@ Full-stack Developer with 3+ years of experience building web applications end-t
     \item Design and optimize data aggregation pipelines on AWS, increase analytics coverage by 400\% and improve application performance by 2.5x.
 \end{itemize}
 
-\underline{\textbf{Infrastructure \& Cost Optimization}} (AWS Aurora, DynamoDB, Oracle DB)
+\underline{\textbf{Infrastructure \& Cost Optimization}} (AWS Aurora, DynamoDB, Oracle DB, Firebase)
 \begin{itemize}[leftmargin=*,itemsep=2pt]
     \item Contribute to infrastructure design and cost optimization, achieving up to 10x cost savings through improved AWS architecture.
 \end{itemize}
