fix: correct city name capitalization, update education year format, and enhance experience section formatting

--- a/resume.tex
+++ b/resume.tex
@@ -76,7 +76,7 @@
     
     % Contact information in table format
     \begin{tabular}{@{}p{0.03\textwidth}p{0.43\textwidth}p{0.03\textwidth}p{0.43\textwidth}@{}}
-        \faMapMarker* & Ho Chi Minh city & \faEnvelope & trungkien1412.dev@gmail.com\\
+        \faMapMarker* & Ho Chi Minh City & \faEnvelope & trungkien1412.dev@gmail.com\\
         & (Possible to relocate) & & \\[0.1cm]
         \faPhone* & 0339950392& \faGlobe & \href{https://kien-tt.com/}{https://kien-tt.com}\\
     \end{tabular}
@@ -94,7 +94,7 @@ Full-stack Developer with 3+ years of experience building web applications end-t
     \section*{Education}
     \textbf{Bachelor of Information Technology}\\
     Ho Chi Minh City University of Technology\\
-    \textit{(2018-23)}\\[0.2cm]
+    \textit{(2018-2023)}\\[0.2cm]
     \textbullet\ \textbf{Languages:} Vietnamese, English
 \end{minipage}
 
@@ -105,7 +105,7 @@ Full-stack Developer with 3+ years of experience building web applications end-t
 \begin{multicols}{3}
 \begin{itemize}[leftmargin=*,itemsep=0pt]
     \item \textbf{Programming: }TypeScript, C\#, Python, Rust. 
-    \item \textbf{Cloud Engineering:} AWS (S3, Lambda, Step Function, ECS, RDS), Firebase. 
+    \item \textbf{Cloud Engineering:} AWS (S3, Lambda, Step Functions, ECS, RDS), Firebase. 
     \item \textbf{Database:} Oracle, MySQL, DynamoDB, AWS Aurora.
     \item \textbf{DevOps:} Docker, Terraform, CI/CD.
     \item \textbf{Professional communication} - Understand both \textbf{business} and \textbf{technical} concepts.
@@ -115,7 +115,7 @@ Full-stack Developer with 3+ years of experience building web applications end-t
 
 \section*{Experience}
 
-\experienceitem{Care Connect Vietnam}{Mar 2023 - Present}{Full-stack Developer}{}
+\experienceitem{\textbf{Care Connect Vietnam}}{\textbf{Mar 2023 - Present}}{\textbf{Full-stack Developer}}{}
 
 \underline{\textbf{Production System Development}} (TypeScript, Angular, C\#, .NET Core)
 \begin{itemize}[leftmargin=*,itemsep=2pt]
@@ -134,7 +134,7 @@ Full-stack Developer with 3+ years of experience building web applications end-t
 
 \vspace{0.3cm}
 
-\experienceitem{Freelance Software Developer}{May 2024 - Present}{Self-Employed / Independent Contractor}{}
+\experienceitem{\textbf{Freelance Software Developer}}{\textbf{May 2024 - Present}}{\textbf{Self-Employed / Independent Contractor}}{}
 
 \underline{\textbf{Web Development \& Customization}} (PHP, WordPress)
 \begin{itemize}[leftmargin=*,itemsep=2pt]
