feat: Enhance resume experience descriptions for clarity and impact, and refine formatting.

--- a/resume.tex
+++ b/resume.tex
@@ -77,8 +77,8 @@
     % Contact information in table format
     \begin{tabular}{@{}p{0.03\textwidth}p{0.43\textwidth}p{0.03\textwidth}p{0.43\textwidth}@{}}
         \faMapMarker* & Ho Chi Minh City & \faEnvelope & trungkien1412.dev@gmail.com\\
-        & (Possible to relocate) & & \\[0.1cm]
-        \faPhone* & 0339950392& \faGlobe & \href{https://kien-tt.com/}{https://kien-tt.com}\\
+        & & & \\[0.1cm]
+        \faPhone* & 0339950392& \faGlobe & \href{https://www.linkedin.com/in/trungkiendev/}{linkedin.com/in/trungkiendev}\\
     \end{tabular}
 \end{minipage}
 
@@ -109,47 +109,42 @@ Full-stack Developer with 3+ years of experience building web applications end-t
     \item \textbf{Database:} Oracle, MySQL, DynamoDB, AWS Aurora.
     \item \textbf{DevOps:} Docker, Terraform, CI/CD.
     \item \textbf{Professional communication} - Understand both \textbf{business} and \textbf{technical} concepts.
-    \item \textbf{Others:} Git, Linux, Selenium, Jest , xUnit, Nova Act.
+    \item \textbf{Others:} Git, Linux, Selenium, Jest, xUnit, Nova Act.
 \end{itemize}
 \end{multicols}
 
 \section*{Experience}
 
-\experienceitem{\textbf{Care Connect Vietnam}}{\textbf{Mar 2023 - Present}}{\textbf{Full-stack Developer}}{}
+\experienceitem{Care Connect Vietnam}{Mar 2023 - Present}{Full-stack Developer}{}
 
-\underline{\textbf{Production System Development}} (TypeScript, Angular, C\#, .NET Core)
+\textbf{Production System Development} (TypeScript, Angular, C\#, .NET Core)
 \begin{itemize}[leftmargin=*,itemsep=2pt]
-    \item Build and scale production systems serving 20k+ users and 30k+ connected devices, own features end-to-end.
+    \item Developing and scaling cloud-native systems serving 20k+ users and 30k+ IoT devices, taking full ownership of features from architectural design to production.
 \end{itemize}
 
-\underline{\textbf{Data Pipeline \& Performance Optimization}} (AWS Step Functions, Lambda)
+\textbf{Data Pipeline \& Performance Optimization} (AWS Step Functions, Lambda)
 \begin{itemize}[leftmargin=*,itemsep=2pt]
-    \item Design and optimize data aggregation pipelines on AWS, increase analytics coverage by 400\% and improve application performance by 2.5x.
+    \item Architected serverless data pipelines which increased analytics coverage by 400\% and improved application performance by 2.5x.
 \end{itemize}
 
-\underline{\textbf{Infrastructure \& Cost Optimization}} (AWS Aurora, DynamoDB, Oracle DB, Firebase)
+\textbf{Infrastructure \& Cost Optimization} (AWS Aurora, DynamoDB, Oracle, Firebase)
 \begin{itemize}[leftmargin=*,itemsep=2pt]
-    \item Contribute to infrastructure design and cost optimization, achieving up to 10x cost savings through improved AWS architecture.
+    \item Led infrastructure redesign and cost-saving initiatives, achieving 10x cost reduction through improved AWS architecture and resource management.
 \end{itemize}
 
 \vspace{0.3cm}
 
-\experienceitem{\textbf{Freelance Software Developer}}{\textbf{May 2024 - Present}}{\textbf{Self-Employed / Independent Contractor}}{}
+\experienceitem{Freelance Software Developer}{May 2024 - Present}{Self-Employed / Independent Contractor}{}
 
-\underline{\textbf{Web Development \& Customization}} (PHP, WordPress)
+\textbf{Web Development \& Solutions} (PHP, WordPress, TypeScript, React)
 \begin{itemize}[leftmargin=*,itemsep=2pt]
-    \item Deliver and customize 10+ client websites and landing pages using WordPress templates, supporting sales, marketing, and small business operations.
+    \item Delivered 10+ custom web solutions and landing pages, optimizing for SEO and performance to drive sales and marketing for small businesses.
+    \item Maintain and enhance production Angular/React applications, implementing feature updates and performance improvements for various clients.
 \end{itemize}
 
-\underline{\textbf{Application Maintenance \& Enhancement}} (TypeScript, Angular, React)
+\textbf{Client Collaboration \& Delivery}
 \begin{itemize}[leftmargin=*,itemsep=2pt]
-    \item Maintain and enhance production Angular and React applications, implement feature updates, bug fixes, and performance improvements.
-    \item Provide ongoing maintenance and technical support, ensure site stability, security updates, and smooth client operations.
-\end{itemize}
-
-\underline{\textbf{Client Collaboration}}
-\begin{itemize}[leftmargin=*,itemsep=2pt]
-    \item Work directly with clients to gather requirements, estimate scope, and deliver solutions on schedule.
+    \item Managing full project lifecycles: from requirement gathering and scope estimation to final delivery and ongoing technical support.
 \end{itemize}
 
 \vspace{0.3cm}
