Refactor: Adjust skills section layout and refine skill descriptions.

--- a/resume.tex
+++ b/resume.tex
@@ -102,13 +102,14 @@ Full-stack Developer with 3+ years of experience building web applications end-t
 
 \section*{Key Skills}
 
-\begin{multicols}{3}
-\begin{itemize}[leftmargin=*,itemsep=0pt]
-    \item \textbf{Programming: }TypeScript, C\#, Python, Rust. 
+\begin{multicols}{2}
+\raggedright
+\begin{itemize}[leftmargin=*,itemsep=2pt]
+    \item \textbf{Programming:} TypeScript, C\#, Python, Rust. 
     \item \textbf{Cloud Engineering:} AWS (S3, Lambda, Step Functions, ECS, RDS), Firebase. 
     \item \textbf{Database:} Oracle, MySQL, DynamoDB, AWS Aurora.
     \item \textbf{DevOps:} Docker, Terraform, CI/CD.
-    \item \textbf{Professional communication} - Understand both \textbf{business} and \textbf{technical} concepts.
+    \item \textbf{Communication:} Professional technical \& business communication.
     \item \textbf{Others:} Git, Linux, Selenium, Jest, xUnit, Nova Act.
 \end{itemize}
 \end{multicols}
@@ -117,34 +118,36 @@ Full-stack Developer with 3+ years of experience building web applications end-t
 
 \experienceitem{Care Connect Vietnam}{Mar 2023 - Present}{Full-stack Developer}{}
 
-\textbf{Production System Development} (TypeScript, Angular, C\#, .NET Core)
+\textbf{Real-time System Architecture} (C\#, .NET Core, TypeScript, Angular)
 \begin{itemize}[leftmargin=*,itemsep=2pt]
-    \item Developing and scaling cloud-native systems serving 20k+ users and 30k+ IoT devices, taking full ownership of features from architectural design to production.
+    \item Engineered a high-performance **Real-time Data Synchronization System** serving 30k+ concurrent devices using a **Pub/Sub architecture**.
+    \item Developed efficient message-handling logic where data updates are broadcasted instantly to all devices subscribed to a channel, ensuring sub-second latency for 20k+ active users.
 \end{itemize}
 
-\textbf{Data Pipeline \& Performance Optimization} (AWS Step Functions, Lambda)
+\textbf{Serverless Workflow Orchestration} (AWS Step Functions, Lambda, S3, Oracle)
 \begin{itemize}[leftmargin=*,itemsep=2pt]
-    \item Architected serverless data pipelines which increased analytics coverage by 400\% and improved application performance by 2.5x.
+    \item Engineered a request-driven processing engine using **AWS Step Functions** to orchestrate multi-stage business logic and complex data extractions from **Oracle DB**.
+    \item Automated the transformation and delivery of processed results into **Amazon S3**, expanding analytics coverage by 400\% and reducing end-to-end processing latency by 2.5x.
 \end{itemize}
 
-\textbf{Infrastructure \& Cost Optimization} (AWS Aurora, DynamoDB, Oracle, Firebase)
+\textbf{Cloud Infrastructure \& Cost Governance} (AWS Aurora, DynamoDB, Oracle)
 \begin{itemize}[leftmargin=*,itemsep=2pt]
-    \item Led infrastructure redesign and cost-saving initiatives, achieving 10x cost reduction through improved AWS architecture and resource management.
+    \item Spearheaded infrastructure redesign and resource optimization, achieving a **10x reduction in AWS monthly costs** by implementing auto-scaling and serverless pay-per-use models.
 \end{itemize}
 
 \vspace{0.3cm}
 
 \experienceitem{Freelance Software Developer}{May 2024 - Present}{Self-Employed / Independent Contractor}{}
 
-\textbf{Web Development \& Solutions} (PHP, WordPress, TypeScript, React)
+\textbf{Full-Stack Solutions \& Performance Optimization} (TypeScript, React, PHP)
 \begin{itemize}[leftmargin=*,itemsep=2pt]
-    \item Delivered 10+ custom web solutions and landing pages, optimizing for SEO and performance to drive sales and marketing for small businesses.
-    \item Maintain and enhance production Angular/React applications, implementing feature updates and performance improvements for various clients.
+    \item Delivered 10+ high-performance web applications, achieving **90+ Lighthouse scores** through advanced SEO optimization and modern front-end techniques.
+    \item Developed custom automation tools and integrated third-party APIs (Payment Gateways, CRM) to streamline business operations for diverse clients.
 \end{itemize}
 
-\textbf{Client Collaboration \& Delivery}
+\textbf{Consulting \& Project Management}
 \begin{itemize}[leftmargin=*,itemsep=2pt]
-    \item Managing full project lifecycles: from requirement gathering and scope estimation to final delivery and ongoing technical support.
+    \item Managing full SDLC: from initial architectural consulting and technical scoping to automated deployment and long-term maintenance.
 \end{itemize}
 
 \vspace{0.3cm}
