style: Update resume experience section formatting by bolding and uppercasing company names and underlining sub-headings.

--- a/resume.tex
+++ b/resume.tex
@@ -46,8 +46,8 @@
 }
 
 \newcommand{\experienceitem}[4]{
-    \textbf{#1} \hfill \textit{#2}\\
-    \textit{#3} \hfill #4
+    \textbf{#1} \hfill \textbf{#2}\\
+    \textbf{#3} \hfill #4
 }
 
 \begin{document}
@@ -116,36 +116,36 @@ Full-stack Developer with 3+ years of experience building web applications end-t
 
 \section*{Experience}
 
-\experienceitem{Care Connect Vietnam}{Mar 2023 - Present}{Full-stack Developer}{}
+\experienceitem{CARE CONNECT VIETNAM}{Mar 2023 - Present}{Full-stack Developer}{}
 
-\textbf{Real-time System Architecture} (C\#, .NET Core, TypeScript, Angular)
+\underline{Real-time System Architecture} (C\#, .NET Core, TypeScript, Angular)
 \begin{itemize}[leftmargin=*,itemsep=2pt]
     \item Engineered a high-performance **Real-time Data Synchronization System** serving 30k+ concurrent devices using a **Pub/Sub architecture**.
     \item Developed efficient message-handling logic where data updates are broadcasted instantly to all devices subscribed to a channel, ensuring sub-second latency for 20k+ active users.
 \end{itemize}
 
-\textbf{Serverless Workflow Orchestration} (AWS Step Functions, Lambda, S3, Oracle)
+\underline{Serverless Workflow Orchestration} (AWS Step Functions, Lambda, S3, Oracle)
 \begin{itemize}[leftmargin=*,itemsep=2pt]
     \item Engineered a request-driven processing engine using **AWS Step Functions** to orchestrate multi-stage business logic and complex data extractions from **Oracle DB**.
     \item Automated the transformation and delivery of processed results into **Amazon S3**, expanding analytics coverage by 400\% and reducing end-to-end processing latency by 2.5x.
 \end{itemize}
 
-\textbf{Cloud Infrastructure \& Cost Governance} (AWS Aurora, DynamoDB, Oracle)
+\underline{Cloud Infrastructure \& Cost Governance} (AWS Aurora, DynamoDB, Oracle)
 \begin{itemize}[leftmargin=*,itemsep=2pt]
     \item Spearheaded infrastructure redesign and resource optimization, achieving a **10x reduction in AWS monthly costs** by implementing auto-scaling and serverless pay-per-use models.
 \end{itemize}
 
 \vspace{0.3cm}
 
-\experienceitem{Freelance Software Developer}{May 2024 - Present}{Self-Employed / Independent Contractor}{}
+\experienceitem{FREELANCE SOFTWARE DEVELOPER}{May 2024 - Present}{Self-Employed / Independent Contractor}{}
 
-\textbf{Full-Stack Solutions \& Performance Optimization} (TypeScript, React, PHP)
+\underline{Full-Stack Solutions \& Performance Optimization} (TypeScript, React, PHP)
 \begin{itemize}[leftmargin=*,itemsep=2pt]
     \item Delivered 10+ high-performance web applications, achieving **90+ Lighthouse scores** through advanced SEO optimization and modern front-end techniques.
     \item Developed custom automation tools and integrated third-party APIs (Payment Gateways, CRM) to streamline business operations for diverse clients.
 \end{itemize}
 
-\textbf{Consulting \& Project Management}
+\underline{Consulting \& Project Management}
 \begin{itemize}[leftmargin=*,itemsep=2pt]
     \item Managing full SDLC: from initial architectural consulting and technical scoping to automated deployment and long-term maintenance.
 \end{itemize}
