refactor: Update LaTeX bolding syntax from `**text**` to `\textbf{text}`.

--- a/resume.tex
+++ b/resume.tex
@@ -120,19 +120,19 @@ Full-stack Developer with 3+ years of experience building web applications end-t
 
 \underline{Real-time System Architecture} (C\#, .NET Core, TypeScript, Angular)
 \begin{itemize}[leftmargin=*,itemsep=2pt]
-    \item Engineered a high-performance **Real-time Data Synchronization System** serving 30k+ concurrent devices using a **Pub/Sub architecture**.
+    \item Engineered a high-performance \textbf{Real-time Data Synchronization System} serving 30k+ concurrent devices using a \textbf{Pub/Sub architecture}.
     \item Developed efficient message-handling logic where data updates are broadcasted instantly to all devices subscribed to a channel, ensuring sub-second latency for 20k+ active users.
 \end{itemize}
 
 \underline{Serverless Workflow Orchestration} (AWS Step Functions, Lambda, S3, Oracle)
 \begin{itemize}[leftmargin=*,itemsep=2pt]
-    \item Engineered a request-driven processing engine using **AWS Step Functions** to orchestrate multi-stage business logic and complex data extractions from **Oracle DB**.
-    \item Automated the transformation and delivery of processed results into **Amazon S3**, expanding analytics coverage by 400\% and reducing end-to-end processing latency by 2.5x.
+    \item Engineered a request-driven processing engine using \textbf{AWS Step Functions} to orchestrate multi-stage business logic and complex data extractions from \textbf{Oracle DB}.
+    \item Automated the transformation and delivery of processed results into \textbf{Amazon S3}, expanding analytics coverage by 400\% and reducing end-to-end processing latency by 2.5x.
 \end{itemize}
 
 \underline{Cloud Infrastructure \& Cost Governance} (AWS Aurora, DynamoDB, Oracle)
 \begin{itemize}[leftmargin=*,itemsep=2pt]
-    \item Spearheaded infrastructure redesign and resource optimization, achieving a **10x reduction in AWS monthly costs** by implementing auto-scaling and serverless pay-per-use models.
+    \item Spearheaded infrastructure redesign and resource optimization, achieving a \textbf{10x reduction in AWS monthly costs} by implementing auto-scaling and serverless pay-per-use models.
 \end{itemize}
 
 \vspace{0.3cm}
@@ -141,7 +141,7 @@ Full-stack Developer with 3+ years of experience building web applications end-t
 
 \underline{Full-Stack Solutions \& Performance Optimization} (TypeScript, React, PHP)
 \begin{itemize}[leftmargin=*,itemsep=2pt]
-    \item Delivered 10+ high-performance web applications, achieving **90+ Lighthouse scores** through advanced SEO optimization and modern front-end techniques.
+    \item Delivered 10+ high-performance web applications, achieving \textbf{90+ Lighthouse scores} through advanced SEO optimization and modern front-end techniques.
     \item Developed custom automation tools and integrated third-party APIs (Payment Gateways, CRM) to streamline business operations for diverse clients.
 \end{itemize}
 
