docs: Update Real-time System Architecture description to include Firebase and AWS ECS, and refine data synchronization details.

--- a/resume.tex
+++ b/resume.tex
@@ -118,10 +118,10 @@ Full-stack Developer with 3+ years of experience building web applications end-t
 
 \experienceitem{CARE CONNECT VIETNAM}{Mar 2023 - Present}{Full-stack Developer}{}
 
-\underline{Real-time System Architecture} (C\#, .NET Core, TypeScript, Angular)
+\underline{Real-time System Architecture} (C\#, .NET Core, TypeScript, Firebase, AWS ECS)
 \begin{itemize}[leftmargin=*,itemsep=2pt]
-    \item Engineered a high-performance \textbf{Real-time Data Synchronization System} serving 30k+ concurrent devices using a \textbf{Pub/Sub architecture}.
-    \item Developed efficient message-handling logic where data updates are broadcasted instantly to all devices subscribed to a channel, ensuring sub-second latency for 20k+ active users.
+    \item Engineered a high-performance \textbf{Real-time Data Synchronization System} serving 30k+ devices, leveraging \textbf{Firebase} and \textbf{AWS ECS} for scalable Pub/Sub messaging and low-latency broadcasting.
+    \item Developed efficient message-handling logic to ensure data updates are broadcasted instantly to all active users, maintaining sub-second latency across the platform.
 \end{itemize}
 
 \underline{Serverless Workflow Orchestration} (AWS Step Functions, Lambda, S3, Oracle)
