docs: Update technology lists, refine experience descriptions, and add a page break in the resume.

--- a/resume.tex
+++ b/resume.tex
@@ -118,16 +118,17 @@ Full-stack Developer with 3+ years of experience building web applications end-t
 
 \experienceitem{CARE CONNECT VIETNAM}{Mar 2023 - Present}{Full-stack Developer}{}
 
-\underline{Real-time System Architecture} (C\#, .NET Core, TypeScript, Firebase, AWS ECS)
+\underline{Real-time System Architecture} (C\#, TypeScript, .NET Core, Firebase, AWS ECS)
 \begin{itemize}[leftmargin=*,itemsep=2pt]
     \item Engineered a high-performance \textbf{Real-time Data Synchronization System} serving 30k+ devices, leveraging \textbf{Firebase} and \textbf{AWS ECS} for scalable Pub/Sub messaging and low-latency broadcasting.
     \item Developed efficient message-handling logic to ensure data updates are broadcasted instantly to all active users, maintaining sub-second latency across the platform.
 \end{itemize}
 
-\underline{Serverless Workflow Orchestration} (AWS Step Functions, Lambda, S3, Oracle)
+\underline{Serverless Workflow Orchestration} (C\#, TypeScript, AWS Step Functions, Lambda, S3, Oracle)
 \begin{itemize}[leftmargin=*,itemsep=2pt]
     \item Engineered a request-driven processing engine using \textbf{AWS Step Functions} to orchestrate multi-stage business logic and complex data extractions from \textbf{Oracle DB}.
-    \item Automated the transformation and delivery of processed results into \textbf{Amazon S3}, expanding analytics coverage by 400\% and reducing end-to-end processing latency by 2.5x.
+    \item Automated the transformation and delivery of processed results into \textbf{Amazon S3}, providing structured data to power \textbf{analytical dashboards (charts, tables)} for business analysts, leading to a 400\% increase in analytics coverage.
+    \item Optimized workflow performance, reducing end-to-end processing latency by 2.5x through efficient state machine design.
 \end{itemize}
 
 \underline{Cloud Infrastructure \& Cost Governance} (AWS Aurora, DynamoDB, Oracle)
@@ -137,9 +138,11 @@ Full-stack Developer with 3+ years of experience building web applications end-t
 
 \vspace{0.3cm}
 
+\newpage
+
 \experienceitem{FREELANCE SOFTWARE DEVELOPER}{May 2024 - Present}{Self-Employed / Independent Contractor}{}
 
-\underline{Full-Stack Solutions \& Performance Optimization} (TypeScript, React, PHP)
+\underline{Full-Stack Solutions \& Performance Optimization} (TypeScript, PHP, React, WordPress)
 \begin{itemize}[leftmargin=*,itemsep=2pt]
     \item Delivered 10+ high-performance web applications, achieving \textbf{90+ Lighthouse scores} through advanced SEO optimization and modern front-end techniques.
     \item Developed custom automation tools and integrated third-party APIs (Payment Gateways, CRM) to streamline business operations for diverse clients.
